# hackathon

backend/: .gitignore  docker-compose.yml
backend/app/: Dockerfile
backend/app/app/: docker-entrypoint.sh  pyproject.toml
backend/app/app/alembic/: env.py
backend/app/app/alembic/versions/: 311cec4f2a28_initial_migration.py  b17c65911c7c_add_conversation_history.py
backend/app/app/app/: bot.py  db.py  main.py  models.py  schemas.py  settings.py
backend/app/app/app/api/: deps.py
backend/app/app/app/api/v1/: __init__.py  dashboard.py  user.py
backend/db/: Dockerfile  init-db.sh
data/: README.md
frontend/: nuxt.config.ts  package.json
frontend/components/: ErrorMessages.vue  NavBar.vue
frontend/layouts/: default.vue
frontend/pages/: index.vue
frontend/pages/dashboard/: add-goal.vue  goals.vue
frontend/pages/user/: enter-phone.vue  logout.vue  verify-otp.vue
frontend/plugins/: bootstrap.client.js
frontend/stores/: userStore.js
mcp/: README.md
