[tool.poetry]
name = "SmartServe Backend"
version = "0.1.0"
description = ""
authors = ["Alen"]
readme = "README.md"

[tool.poetry.dependencies]
alembic = "^1.15.1"
anthropic = "^0.49.0"
fastapi = {extras = ["standard"], version = "^0.115.11"}
nanoid = "^2.0.0"
psycopg = {extras = ["binary"], version = "^3.2.6"}
pydantic-settings = "^2.8.1"
python = "^3.13"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.39"}
sqlalchemy-utils = "^0.41.2"
telethon = "^1.40.0"

[tool.ruff]
line-length = 120

